--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,31 @@ server.port=8080
 # Springdoc OpenAPI Configuration
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=orderuser
+spring.rabbitmq.password=orderpass
+
+# Spring Cloud Stream Configuration
+# Define which functions to bind (critical!)
+spring.cloud.function.definition=orderCreated;orderCompleted;orderExpired
+
+# Output bindings (for publishing events)
+spring.cloud.stream.bindings.orderCreated-out-0.destination=order.created
+spring.cloud.stream.bindings.orderCompleted-out-0.destination=order.completed
+spring.cloud.stream.bindings.orderExpired-out-0.destination=order.expired
+
+# Input bindings (for consuming events)
+spring.cloud.stream.bindings.orderCreated-in-0.destination=order.created
+spring.cloud.stream.bindings.orderCreated-in-0.group=order-processing-service
+
+spring.cloud.stream.bindings.orderCompleted-in-0.destination=order.completed
+spring.cloud.stream.bindings.orderCompleted-in-0.group=notification-service
+
+spring.cloud.stream.bindings.orderExpired-in-0.destination=order.expired
+spring.cloud.stream.bindings.orderExpired-in-0.group=notification-service
+
+# Scheduling Configuration
+spring.task.scheduling.pool.size=2
