--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,23 @@ services:
       timeout: 5s
       retries: 5
 
+  rabbitmq:
+    image: rabbitmq:3.13-management-alpine
+    container_name: orderdb-rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: orderuser
+      RABBITMQ_DEFAULT_PASS: orderpass
+    ports:
+      - "5672:5672"   # AMQP port
+      - "15672:15672" # Management UI
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   postgres_data:
+  rabbitmq_data:
